[project]
name = "evo-featureflags-protobuf"
version = "0.3.0"
description = "Protocol Buffers stub files for feature flags service"
authors = [
    {name = "d.zakharchuk", email = "d.zakharchuk@smartweb.com.ua"},
    {name = "m.kindritskiy", email = "m.kindritskiy@smartweb.com.ua"},
    {name = "Vladimir Magamedov", email = "vladimir@magamedov.com"},
]
dependencies = []
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.scripts]
protoc = "./scripts/protoc.sh"

[project.optional-dependencies]
protoc = [
    "grpcio-tools>=1.59.0",
    "hiku==0.7.0rc35",
    "protobuf>=4.24.4",
    "grpclib>=0.4.6",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
